# LineArt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Infos.md  Makefile  README.md  dexi_gui.py  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: lint-advisory.yml  lint.yml
docs/: analysis_report.md  gui_mockup.txt
examples/: README.md
src/: __init__.py  dexi_gui.py  pipeline.py
src/lineart/: __init__.py  config.py  constants.py  devices.py  fs.py  image_ops.py  pipeline.py  prefetch.py  processing.py  svg.py
src/lineart/models/: __init__.py  dexined.py  diffusion.py
tests/: conftest.py  test_batch.py  test_dependencies.py  test_edge_cases.py  test_errors.py  test_prefetch.py  test_process_folder.py  test_recovery.py  test_responsive.py  test_sizes.py  test_threading.py  test_utils.py
