[project]
name = "lineart"
version = "0.0.0"
requires-python = ">=3.8,<3.12"
dependencies = [
    "torch",
    "diffusers",
    "transformers",
    "accelerate",
    "controlnet-aux",
    "pillow",
    "opencv-python",
    "scikit-image",
    "numpy",
    "requests",
    "huggingface-hub",
    "xformers",
]

[project.optional-dependencies]
gui = ["tkinterdnd2"]
svg = ["vtracer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","W","I","UP","D","B","C90"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.deptry]

[tool.deptry.per_rule_ignores]
DEP002 = ["transformers", "accelerate", "xformers", "vtracer", "controlnet-aux"]
